parser.output
State 10 conflicts: 1 shift/reduce
State 30 conflicts: 1 shift/reduce
State 39 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: items

    2 items: items item
    3      | item

    4 item: func_decl
    5     | var_decl
    6     | stmt
    7     | ';'

    8 func_decl: TRAINER IDENT '(' opt_param_list ')' block

    9 opt_param_list: ε
   10               | param_list

   11 param_list: IDENT
   12           | param_list ',' IDENT

   13 var_decl: POKEBALL IDENT '=' expr ';'

   14 block: '{' items '}'
   15      | '{' '}'

   16 stmt: print
   17     | if_stmt
   18     | while_stmt
   19     | for_stmt
   20     | return_stmt
   21     | expr
   22     | block

   23 print: SHOUT '(' expr ')'

   24 if_stmt: BATTLE '(' expr ')' block opt_else

   25 opt_else: ε
   26         | ELSE block

   27 while_stmt: TALLGRASS '(' expr ')' block

   28 for_stmt: JOURNEY '(' for_init ';' expr ';' expr ')' block

   29 for_init: POKEBALL IDENT '=' expr

   30 return_stmt: EVOLVE expr

   31 expr: IDENT '=' expr
   32     | expr OR expr
   33     | expr AND expr
   34     | expr EQ expr
   35     | expr NE expr
   36     | expr '<' expr
   37     | expr '>' expr
   38     | expr LE expr
   39     | expr GE expr
   40     | expr '+' expr
   41     | expr '-' expr
   42     | expr '*' expr
   43     | expr '/' expr
   44     | expr '%' expr
   45     | '-' expr
   46     | '!' expr
   47     | call
   48     | primary

   49 call: IDENT '(' opt_arg_list ')'

   50 opt_arg_list: ε
   51             | arg_list

   52 arg_list: expr
   53         | arg_list ',' expr

   54 primary: NUMBER
   55        | STRING
   56        | TRUE
   57        | FALSE
   58        | IDENT
   59        | '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 46
    '%' (37) 44
    '(' (40) 8 23 24 27 28 49 59
    ')' (41) 8 23 24 27 28 49 59
    '*' (42) 42
    '+' (43) 40
    ',' (44) 12 53
    '-' (45) 41 45
    '/' (47) 43
    ';' (59) 7 13 28
    '<' (60) 36
    '=' (61) 13 29 31
    '>' (62) 37
    '{' (123) 14 15
    '}' (125) 14 15
    error (256)
    TRAINER (258) 8
    POKEBALL (259) 13 29
    BATTLE (260) 24
    ELSE (261) 26
    TALLGRASS (262) 27
    JOURNEY (263) 28
    SHOUT (264) 23
    EVOLVE (265) 30
    TRUE (266) 56
    FALSE (267) 57
    IDENT <str> (268) 8 11 12 13 29 31 49 58
    NUMBER <str> (269) 54
    STRING <str> (270) 55
    EQ (271) 34
    NE (272) 35
    LE (273) 38
    GE (274) 39
    AND (275) 33
    OR (276) 32
    UMINUS (277)
    NOT (278)


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    program <str> (40)
        on left: 1
        on right: 0
    items <str> (41)
        on left: 2 3
        on right: 1 2 14
    item <str> (42)
        on left: 4 5 6 7
        on right: 2 3
    func_decl <str> (43)
        on left: 8
        on right: 4
    opt_param_list <str> (44)
        on left: 9 10
        on right: 8
    param_list <str> (45)
        on left: 11 12
        on right: 10 12
    var_decl <str> (46)
        on left: 13
        on right: 5
    block <str> (47)
        on left: 14 15
        on right: 8 22 24 26 27 28
    stmt <str> (48)
        on left: 16 17 18 19 20 21 22
        on right: 6
    print <str> (49)
        on left: 23
        on right: 16
    if_stmt <str> (50)
        on left: 24
        on right: 17
    opt_else <str> (51)
        on left: 25 26
        on right: 24
    while_stmt <str> (52)
        on left: 27
        on right: 18
    for_stmt <str> (53)
        on left: 28
        on right: 19
    for_init <str> (54)
        on left: 29
        on right: 28
    return_stmt <str> (55)
        on left: 30
        on right: 20
    expr <str> (56)
        on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
        on right: 13 21 23 24 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 52 53 59
    call <str> (57)
        on left: 49
        on right: 47
    opt_arg_list <str> (58)
        on left: 50 51
        on right: 49
    arg_list <str> (59)
        on left: 52 53
        on right: 51 53
    primary <str> (60)
        on left: 54 55 56 57 58 59
        on right: 48


State 0

    0 $accept: • program $end

    TRAINER    shift, and go to state 1
    POKEBALL   shift, and go to state 2
    BATTLE     shift, and go to state 3
    TALLGRASS  shift, and go to state 4
    JOURNEY    shift, and go to state 5
    SHOUT      shift, and go to state 6
    EVOLVE     shift, and go to state 7
    TRUE       shift, and go to state 8
    FALSE      shift, and go to state 9
    IDENT      shift, and go to state 10
    NUMBER     shift, and go to state 11
    STRING     shift, and go to state 12
    '-'        shift, and go to state 13
    ';'        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 16
    '!'        shift, and go to state 17

    program      go to state 18
    items        go to state 19
    item         go to state 20
    func_decl    go to state 21
    var_decl     go to state 22
    block        go to state 23
    stmt         go to state 24
    print        go to state 25
    if_stmt      go to state 26
    while_stmt   go to state 27
    for_stmt     go to state 28
    return_stmt  go to state 29
    expr         go to state 30
    call         go to state 31
    primary      go to state 32


State 1

    8 func_decl: TRAINER • IDENT '(' opt_param_list ')' block

    IDENT  shift, and go to state 33


State 2

   13 var_decl: POKEBALL • IDENT '=' expr ';'

    IDENT  shift, and go to state 34


State 3

   24 if_stmt: BATTLE • '(' expr ')' block opt_else

    '('  shift, and go to state 35


State 4

   27 while_stmt: TALLGRASS • '(' expr ')' block

    '('  shift, and go to state 36


State 5

   28 for_stmt: JOURNEY • '(' for_init ';' expr ';' expr ')' block

    '('  shift, and go to state 37


State 6

   23 print: SHOUT • '(' expr ')'

    '('  shift, and go to state 38


State 7

   30 return_stmt: EVOLVE • expr

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 39
    call     go to state 31
    primary  go to state 32


State 8

   56 primary: TRUE •

    $default  reduce using rule 56 (primary)


State 9

   57 primary: FALSE •

    $default  reduce using rule 57 (primary)


State 10

   31 expr: IDENT • '=' expr
   49 call: IDENT • '(' opt_arg_list ')'
   58 primary: IDENT •

    '='  shift, and go to state 40
    '('  shift, and go to state 41

    '('       [reduce using rule 58 (primary)]
    $default  reduce using rule 58 (primary)


State 11

   54 primary: NUMBER •

    $default  reduce using rule 54 (primary)


State 12

   55 primary: STRING •

    $default  reduce using rule 55 (primary)


State 13

   45 expr: '-' • expr

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 42
    call     go to state 31
    primary  go to state 32


State 14

    7 item: ';' •

    $default  reduce using rule 7 (item)


State 15

   59 primary: '(' • expr ')'

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 43
    call     go to state 31
    primary  go to state 32


State 16

   14 block: '{' • items '}'
   15      | '{' • '}'

    TRAINER    shift, and go to state 1
    POKEBALL   shift, and go to state 2
    BATTLE     shift, and go to state 3
    TALLGRASS  shift, and go to state 4
    JOURNEY    shift, and go to state 5
    SHOUT      shift, and go to state 6
    EVOLVE     shift, and go to state 7
    TRUE       shift, and go to state 8
    FALSE      shift, and go to state 9
    IDENT      shift, and go to state 10
    NUMBER     shift, and go to state 11
    STRING     shift, and go to state 12
    '-'        shift, and go to state 13
    ';'        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 16
    '}'        shift, and go to state 44
    '!'        shift, and go to state 17

    items        go to state 45
    item         go to state 20
    func_decl    go to state 21
    var_decl     go to state 22
    block        go to state 23
    stmt         go to state 24
    print        go to state 25
    if_stmt      go to state 26
    while_stmt   go to state 27
    for_stmt     go to state 28
    return_stmt  go to state 29
    expr         go to state 30
    call         go to state 31
    primary      go to state 32


State 17

   46 expr: '!' • expr

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 46
    call     go to state 31
    primary  go to state 32


State 18

    0 $accept: program • $end

    $end  shift, and go to state 47


State 19

    1 program: items •
    2 items: items • item

    TRAINER    shift, and go to state 1
    POKEBALL   shift, and go to state 2
    BATTLE     shift, and go to state 3
    TALLGRASS  shift, and go to state 4
    JOURNEY    shift, and go to state 5
    SHOUT      shift, and go to state 6
    EVOLVE     shift, and go to state 7
    TRUE       shift, and go to state 8
    FALSE      shift, and go to state 9
    IDENT      shift, and go to state 10
    NUMBER     shift, and go to state 11
    STRING     shift, and go to state 12
    '-'        shift, and go to state 13
    ';'        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 16
    '!'        shift, and go to state 17

    $default  reduce using rule 1 (program)

    item         go to state 48
    func_decl    go to state 21
    var_decl     go to state 22
    block        go to state 23
    stmt         go to state 24
    print        go to state 25
    if_stmt      go to state 26
    while_stmt   go to state 27
    for_stmt     go to state 28
    return_stmt  go to state 29
    expr         go to state 30
    call         go to state 31
    primary      go to state 32


State 20

    3 items: item •

    $default  reduce using rule 3 (items)


State 21

    4 item: func_decl •

    $default  reduce using rule 4 (item)


State 22

    5 item: var_decl •

    $default  reduce using rule 5 (item)


State 23

   22 stmt: block •

    $default  reduce using rule 22 (stmt)


State 24

    6 item: stmt •

    $default  reduce using rule 6 (item)


State 25

   16 stmt: print •

    $default  reduce using rule 16 (stmt)


State 26

   17 stmt: if_stmt •

    $default  reduce using rule 17 (stmt)


State 27

   18 stmt: while_stmt •

    $default  reduce using rule 18 (stmt)


State 28

   19 stmt: for_stmt •

    $default  reduce using rule 19 (stmt)


State 29

   20 stmt: return_stmt •

    $default  reduce using rule 20 (stmt)


State 30

   21 stmt: expr •
   32 expr: expr • OR expr
   33     | expr • AND expr
   34     | expr • EQ expr
   35     | expr • NE expr
   36     | expr • '<' expr
   37     | expr • '>' expr
   38     | expr • LE expr
   39     | expr • GE expr
   40     | expr • '+' expr
   41     | expr • '-' expr
   42     | expr • '*' expr
   43     | expr • '/' expr
   44     | expr • '%' expr

    EQ   shift, and go to state 49
    NE   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    AND  shift, and go to state 53
    OR   shift, and go to state 54
    '<'  shift, and go to state 55
    '>'  shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    '-'       [reduce using rule 21 (stmt)]
    $default  reduce using rule 21 (stmt)


State 31

   47 expr: call •

    $default  reduce using rule 47 (expr)


State 32

   48 expr: primary •

    $default  reduce using rule 48 (expr)


State 33

    8 func_decl: TRAINER IDENT • '(' opt_param_list ')' block

    '('  shift, and go to state 62


State 34

   13 var_decl: POKEBALL IDENT • '=' expr ';'

    '='  shift, and go to state 63


State 35

   24 if_stmt: BATTLE '(' • expr ')' block opt_else

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 64
    call     go to state 31
    primary  go to state 32


State 36

   27 while_stmt: TALLGRASS '(' • expr ')' block

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 65
    call     go to state 31
    primary  go to state 32


State 37

   28 for_stmt: JOURNEY '(' • for_init ';' expr ';' expr ')' block

    POKEBALL  shift, and go to state 66

    for_init  go to state 67


State 38

   23 print: SHOUT '(' • expr ')'

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 68
    call     go to state 31
    primary  go to state 32


State 39

   30 return_stmt: EVOLVE expr •
   32 expr: expr • OR expr
   33     | expr • AND expr
   34     | expr • EQ expr
   35     | expr • NE expr
   36     | expr • '<' expr
   37     | expr • '>' expr
   38     | expr • LE expr
   39     | expr • GE expr
   40     | expr • '+' expr
   41     | expr • '-' expr
   42     | expr • '*' expr
   43     | expr • '/' expr
   44     | expr • '%' expr

    EQ   shift, and go to state 49
    NE   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    AND  shift, and go to state 53
    OR   shift, and go to state 54
    '<'  shift, and go to state 55
    '>'  shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    '-'       [reduce using rule 30 (return_stmt)]
    $default  reduce using rule 30 (return_stmt)


State 40

   31 expr: IDENT '=' • expr

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 69
    call     go to state 31
    primary  go to state 32


State 41

   49 call: IDENT '(' • opt_arg_list ')'

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    $default  reduce using rule 50 (opt_arg_list)

    expr          go to state 70
    call          go to state 31
    opt_arg_list  go to state 71
    arg_list      go to state 72
    primary       go to state 32


State 42

   32 expr: expr • OR expr
   33     | expr • AND expr
   34     | expr • EQ expr
   35     | expr • NE expr
   36     | expr • '<' expr
   37     | expr • '>' expr
   38     | expr • LE expr
   39     | expr • GE expr
   40     | expr • '+' expr
   41     | expr • '-' expr
   42     | expr • '*' expr
   43     | expr • '/' expr
   44     | expr • '%' expr
   45     | '-' expr •

    $default  reduce using rule 45 (expr)


State 43

   32 expr: expr • OR expr
   33     | expr • AND expr
   34     | expr • EQ expr
   35     | expr • NE expr
   36     | expr • '<' expr
   37     | expr • '>' expr
   38     | expr • LE expr
   39     | expr • GE expr
   40     | expr • '+' expr
   41     | expr • '-' expr
   42     | expr • '*' expr
   43     | expr • '/' expr
   44     | expr • '%' expr
   59 primary: '(' expr • ')'

    EQ   shift, and go to state 49
    NE   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    AND  shift, and go to state 53
    OR   shift, and go to state 54
    '<'  shift, and go to state 55
    '>'  shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61
    ')'  shift, and go to state 73


State 44

   15 block: '{' '}' •

    $default  reduce using rule 15 (block)


State 45

    2 items: items • item
   14 block: '{' items • '}'

    TRAINER    shift, and go to state 1
    POKEBALL   shift, and go to state 2
    BATTLE     shift, and go to state 3
    TALLGRASS  shift, and go to state 4
    JOURNEY    shift, and go to state 5
    SHOUT      shift, and go to state 6
    EVOLVE     shift, and go to state 7
    TRUE       shift, and go to state 8
    FALSE      shift, and go to state 9
    IDENT      shift, and go to state 10
    NUMBER     shift, and go to state 11
    STRING     shift, and go to state 12
    '-'        shift, and go to state 13
    ';'        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 16
    '}'        shift, and go to state 74
    '!'        shift, and go to state 17

    item         go to state 48
    func_decl    go to state 21
    var_decl     go to state 22
    block        go to state 23
    stmt         go to state 24
    print        go to state 25
    if_stmt      go to state 26
    while_stmt   go to state 27
    for_stmt     go to state 28
    return_stmt  go to state 29
    expr         go to state 30
    call         go to state 31
    primary      go to state 32


State 46

   32 expr: expr • OR expr
   33     | expr • AND expr
   34     | expr • EQ expr
   35     | expr • NE expr
   36     | expr • '<' expr
   37     | expr • '>' expr
   38     | expr • LE expr
   39     | expr • GE expr
   40     | expr • '+' expr
   41     | expr • '-' expr
   42     | expr • '*' expr
   43     | expr • '/' expr
   44     | expr • '%' expr
   46     | '!' expr •

    $default  reduce using rule 46 (expr)


State 47

    0 $accept: program $end •

    $default  accept


State 48

    2 items: items item •

    $default  reduce using rule 2 (items)


State 49

   34 expr: expr EQ • expr

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 75
    call     go to state 31
    primary  go to state 32


State 50

   35 expr: expr NE • expr

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 76
    call     go to state 31
    primary  go to state 32


State 51

   38 expr: expr LE • expr

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 77
    call     go to state 31
    primary  go to state 32


State 52

   39 expr: expr GE • expr

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 78
    call     go to state 31
    primary  go to state 32


State 53

   33 expr: expr AND • expr

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 79
    call     go to state 31
    primary  go to state 32


State 54

   32 expr: expr OR • expr

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 80
    call     go to state 31
    primary  go to state 32


State 55

   36 expr: expr '<' • expr

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 81
    call     go to state 31
    primary  go to state 32


State 56

   37 expr: expr '>' • expr

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 82
    call     go to state 31
    primary  go to state 32


State 57

   40 expr: expr '+' • expr

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 83
    call     go to state 31
    primary  go to state 32


State 58

   41 expr: expr '-' • expr

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 84
    call     go to state 31
    primary  go to state 32


State 59

   42 expr: expr '*' • expr

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 85
    call     go to state 31
    primary  go to state 32


State 60

   43 expr: expr '/' • expr

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 86
    call     go to state 31
    primary  go to state 32


State 61

   44 expr: expr '%' • expr

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 87
    call     go to state 31
    primary  go to state 32


State 62

    8 func_decl: TRAINER IDENT '(' • opt_param_list ')' block

    IDENT  shift, and go to state 88

    $default  reduce using rule 9 (opt_param_list)

    opt_param_list  go to state 89
    param_list      go to state 90


State 63

   13 var_decl: POKEBALL IDENT '=' • expr ';'

    TRUE    shift, and go to state 8
    FALSE   shift, and go to state 9
    IDENT   shift, and go to state 10
    NUMBER  shift, and go to state 11
    STRING  shift, and go to state 12
    '-'     shift, and go to state 13
    '('     shift, and go to state 15
    '!'     shift, and go to state 17

    expr     go to state 91
    call     go to state 31
    primary  go to state 32


State 64

   24 if_stmt: BATTLE '(' expr • ')' block opt_else
   32 expr: expr • OR expr
   33     | expr • AND expr
   34     | expr • EQ expr
   35     | expr • NE expr
   36     | expr • '<' expr
   37     | expr • '>' expr
   38     | expr • LE expr
   39     | expr • GE expr
   40     | expr • '+' expr
   41     | expr • '-' expr
   42     | expr • '*' expr
   43     | expr • '/' expr
   44     | expr • '%' expr

    EQ   shift, and go to state 49
    NE   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    AND  shift, and go to state 53
    OR   shift, and go to state 54
    '<'  shift, and go to state 55
    '>'  shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61
    ')'  shift, and go to state 92


State 65

   27 while_stmt: TALLGRASS '(' expr • ')' block
   32 expr: expr • OR expr
   33     | expr • AND expr
   34     | expr • EQ expr
   35     | expr • NE expr
   36     | expr • '<' expr
   37     | expr • '>' expr
   38     | expr • LE expr
   39     | expr • GE expr
   40     | expr • '+' expr
   41     | expr • '-' expr
   42     | expr • '*' expr
   43     | expr • '/' expr
   44     | expr • '%' expr

    EQ   shift, and go to state 49
    NE   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    AND  shift, and go to state 53
    OR   shift, and go to state 54
    '<'  shift, and go to state 55
    '>'  shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61
    ')'  shift, and go to state 93


State 66

   29 for_init: POKEBALL • IDENT '=' expr

    IDENT  shift, and go to state 94


State 67

   28 for_stmt: JOURNEY '(' for_init • ';' expr ';' expr ')' block

    ';'  shift, and go to state 95


State 68

   23 print: SHOUT '(' expr • ')'
   32 expr: expr • OR expr
   33     | expr • AND expr
   34     | expr • EQ expr
   35     | expr • NE expr
   36     | expr • '<' expr
   37     | expr • '>' expr
   38     | expr • LE expr
   39     | expr • GE expr
   40     | expr • '+' expr
   41     | expr • '-' expr
   42     | expr • '*' expr
   43     | expr • '/' expr
   44     | expr • '%' expr

    EQ   shift, and go to state 49
    NE   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    AND  shift, and go to state 53
    OR   shift, and go to state 54
    '<'  shift, and go to state 55
    '>'  shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61
    ')'  shift, and go to state 96


State 69

   31 expr: IDENT '=' expr •
   32     | expr • OR expr
   33     | expr • AND expr
   34     | expr • EQ expr
   35     | expr • NE expr
   36     | expr • '<' expr
   37     | expr • '>' expr
   38     | expr • LE expr
   39     | expr • GE expr
   40     | expr • '+' expr
   41     | expr • '-' expr
   42     | expr • '*' expr
   43     | expr • '/' expr
   44     | expr • '%' expr

    EQ   shift, and go to state 49
    NE   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    AND  shift, and go to state 53
    OR   shift, and go to state 54
    '<'  shift, and go to state 55
    '>'  shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 31 (expr)


State 70

   32 expr: expr • OR expr
   33     | expr • AND expr
   34     | expr • EQ expr
   35     | expr • NE expr
   36     | expr • '<' expr
   37     | expr • '>' expr
   38     | expr • LE expr
   39     | expr • GE expr
   40     | expr • '+' expr
   41     | expr • '-' expr
   42     | expr • '*' expr
   43     | expr • '/' expr
   44     | expr • '%' expr
   52 arg_list: expr •

    EQ   shift, and go to state 49
    NE   shift, and go to state 50
    LE   shift, and go to state 51
    GE   shift, and go to state 52
    AND  shift, and go to state 53
    OR   shift, and go to state 54
    '<'  shift, and go to state 55
    '>'  shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 52 (arg_list)


State 71

   49 call: IDENT '(' opt_arg_list • ')'

    ')'  shift, and go to state 97


State 72

   51 opt_arg_list: arg_list •
   53 arg_list: arg_list • ',' expr

    ','  shift, and go to state 98

    $default  reduce using rule 51 (opt_arg_list)


State 73

   59 primary: '(' expr ')' •

    $default  reduce using rule 59 (primary)


State 74

   14 block: '{' items '}' •

    $default  reduce using rule 14 (block)


State 75

   32 expr: expr • OR expr
   33     | expr • AND expr
   34     | expr • EQ expr
   34     | expr EQ expr •
   35     | expr • NE expr
   36     | expr • '<' expr
   37     | expr • '>' expr
   38     | expr • LE expr
   39     | expr • GE expr
   40     | expr • '+' expr
   41     | expr • '-' expr
   42     | expr • '*' expr
   43     | expr • '/' expr
   44     | expr • '%' expr

    LE   shift, and go to state 51
    GE   shift, and go to state 52
    '<'  shift, and go to state 55
    '>'  shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 34 (expr)


State 76

   32 expr: expr • OR expr
   33     | expr • AND expr
   34     | expr • EQ expr
   35     | expr • NE expr
   35     | expr NE expr •
   36     | expr • '<' expr
   37     | expr • '>' expr
   38     | expr • LE expr
   39     | expr • GE expr
   40     | expr • '+' expr
   41     | expr • '-' expr
   42     | expr • '*' expr
   43     | expr • '/' expr
   44     | expr • '%' expr

    LE   shift, and go to state 51
    GE   shift, and go to state 52
    '<'  shift, and go to state 55
    '>'  shift, and go to state 56
    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 35 (expr)


State 77

   32 expr: expr • OR expr
   33     | expr • AND expr
   34     | expr • EQ expr
   35     | expr • NE expr
   36     | expr • '<' expr
   37     | expr • '>' expr
   38     | expr • LE expr
   38     | expr LE expr •
   39     | expr • GE expr
   40     | expr • '+' expr
   41     | expr • '-' expr
   42     | expr • '*' expr
   43     | expr • '/' expr
   44     | expr • '%' expr

    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 38 (expr)


State 78

   32 expr: expr • OR expr
   33     | expr • AND expr
   34     | expr • EQ expr
   35     | expr • NE expr
   36     | expr • '<' expr
   37     | expr • '>' expr
   38     | expr • LE expr
   39     | expr • GE expr
   39     | expr GE expr •
   40     | expr • '+' expr
   41     | expr • '-' expr
   42     | expr • '*' expr
   43     | expr • '/' expr
   44     | expr • '%' expr

    '+'  shift, and go to state 57
    '-'  shift, and go to state 58
    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 39 (expr)


State 79
